--- a/index.html
+++ b/index.html
@@ -2,16 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
 </head>
 <body>
-    <h1>hello git</h1>
-    <h2>hello git 2</h2>
-<<<<<<< HEAD
-    <h3>hello Master & Branch 2</h3>
-=======
-    <h3>hello github</h3>
-    <h4>hello github 2</h4>
->>>>>>> branch2
+    <h1>hello Git</h1>
+    <h2>hello Git2</h2>
+    <h3>hello GitHub</h3>
 </body>
 </html>
